# hqnn-topology

./: CHANGELOG.md  Dockerfile.txt  Expected Full Output.txt  LICENSE.txt  Makefile.txt  Quick-start commands.txt  README.md  Repository Structure.txt  conftest.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
csharp/HQNN.Core/: HQNN.Core.csproj  QuantumNetwork.cs  QuantumNode.cs  TopologicalCorrector.cs
csharp/HQNN.Simulation/: HQNN.Simulation.csproj  SimulationRunner.cs
docs/: Expected Output.txt  api_reference.md  architecture.md  bash.txt  commands for starting from scratch.txt  paper.md  paper.mini.md
examples/: benchmark_error_correction.py  run_full_pipeline.py  run_grover.py  run_shor.py  run_vqe.py  train_noise_predictor.py
hqnn/: init.py
hqnn/algorithms/: grover.py  init.py  shor.py  vqe.py
hqnn/auth/: __init__.py  api_key_manager.py  aws_backend.py  azure_backend.py  bash.txt  license_manager.py  secret_store.py  vault_backend.py
hqnn/backends/: pennylane_backend.py  qiskit_backend.py  tensor_network.py
hqnn/cage/: beam_cage.py  init.py
hqnn/core/: hamiltonian.py  init.py  network.py  quantum_edge.py  quantum_node.py
hqnn/correction/: init.py  surface_code.py  topological.py
hqnn/ml/: hybrid_trainer.py  init.py  noise_predictor_tf.py  noise_predictor_torch.py
hqnn/optimizer/: init.py  slime.py
hqnn/rl/: topology_optimizer.py
hqnn/utils/: gates.py  init.py  metrics.py  visualization.py
notebooks/: full_demo.ipynb
scripts/: admin_keygen.py  evaluate_model.py  generate_synthetic_data.py  profile_simulation.py
tests/: test_algorithms.py  test_cage.py  test_core.py  test_correction.py  test_hamiltonian.py  test_integration.py  test_metrics.py  test_ml.py  test_visualization.py
